--- a/VSC_2B/week4_acticities.html
+++ b/VSC_2B/week4_acticities.html
@@ -6,9 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/activitiesstylesheet.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&family=Lilita+One&display=swap" rel="stylesheet">
+
+
+    <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="nav_bar">
+        <nav class="full-screen-nav">
+            <div class="backdrop"></div>
+            <ul>
+                <li>
+                    <a href="#"> Home</a>
+                </li>
+                <li>
+                    <a href="https://lucyhu13.github.io/workbook_2A/"> Project 2A</a>
+                </li>
+                <li>
+                    <a href="index.html"> Project 2B</a>
+                </li>
+                <li>
+                    <a href="#"> Project 2C</a>
+                </li>
+                <li>
+                    <a href="#"> Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="content">
+            <button class="trigger"><i class="fas fa-bars"></i></button>
+        </div>
+    </div>
+
+
 
     <div class="outercontainer">
         <header>
@@ -17,35 +52,52 @@
 
         <!-- 文本 -->
         <div class="centertext">
-            <h2>Throw of the dice</h2>
-            <p>在这周的课上我们还学习了如何制作骰子游戏。在课上我们讨论了如何制定一些规则。</p>
+            <a href="https://lucyhu13.github.io/Webworkbook_2b/week4/Dice/">
+                <h2>Throw of the dice</h2>
+            </a>
+
+            <p>In this week's lesson we also learned how to make a dice game. In class we discussed how to make some
+                rules.</p>
 
             <img src="pictures/rule1.JPG" alt="">
 
-            <p class="paragraph centertext ">在课后我开始自己制作这个游戏 但我发现这个规则有点不成立 所以我决定重新做他。我将会有两个6面的骰子在画面中心。</p>
+            <p class="paragraph centertext ">After the class I started making this game myself but I found the rules
+                were a bit too complicated
+                So I decided to redo him. I will have two 6-sided dice in the center of the tableau. Each time the mouse
+                clicks, the
+                numbers will be changed at will. If the sum of the numbers of the two dice is greater than
+                6. A red triangle will appear. If it is less than 6, a pink triangle will appear. Please see pictures
+                for details
+            </p>
+            <img src="pictures/dicerule.jpg" alt="">
 
-
-
-
-            <h2>P5 Portrait</h2>
-            <p>第二个作业是画我隔壁同学的肖像画。我想用几何图形来描绘，两个黑色作为眼睛，弧线作为嘴巴</p>
+            <a href="">
+                <h2>P5 Portrait</h2>
+            </a>
+            <p>The second assignment was to draw a portrait of my classmate next door. I want to use geometric figures
+                to describe it,
+                two blacks as eyes and arcs as mouths</p>
             <img src="pictures/nancy1.png" alt="">
-            <p>然后我调整了一下大小开始绘制她的眼镜 我用了两个nofill的圆</p>
-
+            <p>Then I adjusted the size and started to draw her glasses. I used two nofill circles, and then I started
+                to adjust the
+                details, and then added the hair at the back.</p>
+            <img src="pictures/nancy2.png" alt="">
+            <img src="pictures/nancy3.png" alt="">
+            <img src="pictures/nancy.png" alt="">
 
             <h2>Slaves to the Algorithm</h2>
-
+            <p>The third assignment is to use dice to determine the 10 outcomes of the day.</p>
+            <img src="pictures/coin.jpg" alt="">
+            <img src="pictures/coinwater.png" alt="">
+            <img src="pictures/coinmilktea.png" alt="">
 
         </div>
 
 
 
 
-    </div>
 
-    <!--  -->
-
-
+        <script src="js/script.js"></script>
 </body>
 
 </html>
