--- a/VSC_2B/week5_activities.html
+++ b/VSC_2B/week5_activities.html
@@ -4,13 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>week5</title>
     <link rel="stylesheet" href="css/activitiesstylesheet.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&family=Lilita+One&display=swap" rel="stylesheet">
+
+
+    <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="transition">hi ghjkfcgvhbjn</div>
+    <!-- navi -->
+    <div class="nav_bar">
+        <nav class="full-screen-nav">
+            <div class="backdrop"></div>
+            <ul>
+                <li>
+                    <a href="#"> Home</a>
+                </li>
+                <li>
+                    <a href="https://lucyhu13.github.io/workbook_2A/"> Project 2A</a>
+                </li>
+                <li>
+                    <a href="index.html"> Project 2B</a>
+                </li>
+                <li>
+                    <a href="#"> Project 2C</a>
+                </li>
+                <li>
+                    <a href="#"> Contact Me</a>
+                </li>
+            </ul>
+        </nav>
 
+        <div class="content">
+            <button class="trigger"><i class="fas fa-bars"></i></button>
+        </div>
+    </div>
+
+    <div class="outercontainer">
+        <header>
+            <h1 class="transition" style="text-align: center;">WEEK 5 ACTIVITIES</h1>
+        </header>
+
+        <!-- 文本 -->
+        <div class="centertext">
+            <a href="https://lucyhu13.github.io/Webworkbook_2b/week5/sketch_cursortrails/">
+                <h2>Cursor Trails</h2>
+            </a>
+
+            <p>In this week's class we learned how to import images into p5 sketches. First, you need to drag the image
+                into the
+                processing program, and then it will automatically be imported into the data.
+                file, first save the file cur, then use the shortcut key command
+                KOpen the data folder. Then use function preload in p5</p>
+
+            <img src="pictures/cursor2.png" alt="">
+            <img src="pictures/cursor1.png" alt="">
+
+            <a href="">
+                <h2>Dot To Dot</h2>
+                <p>This is an activity which will need the user to press any key on the keyboard to place a number,
+                    click and drag your mouse to draw.</p>
+                <img src="pictures/dottodot.png" alt="">
+                <img src="pictures/dottodot1.png" alt="">
+
+            </a>
+
+
+
+        </div>
+
+        <script src="js/script.js"></script>
 </body>
 
 </html>
