--- a/VSC_2B/index.html
+++ b/VSC_2B/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webworkbook_Porject 2B</title>
     <link rel="stylesheet" href="css/2bstylesheet.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&family=Lilita+One&display=swap" rel="stylesheet">
+
+    <!-- menu -->
     <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"></script>
 </head>
 
@@ -22,7 +28,7 @@
                 <a href="#"> Home</a>
             </li>
             <li>
-                <a href="#"> Project 2A</a>
+                <a href="https://lucyhu13.github.io/workbook_2A/"> Project 2A</a>
             </li>
             <li>
                 <a href="index.html"> Project 2B</a>
