--- a/VSC_2B/week4_acticities.html
+++ b/VSC_2B/week4_acticities.html
@@ -71,7 +71,7 @@
             </p>
             <img src="pictures/dicerule.jpg" alt="">
 
-            <a href="">
+            <a href="https://lucyhu13.github.io/Webworkbook_2b/week4/sketch_nancy/">
                 <h2>P5 Portrait</h2>
             </a>
             <p>The second assignment was to draw a portrait of my classmate next door. I want to use geometric figures
