--- a/VSC_2B/week5_activities.html
+++ b/VSC_2B/week5_activities.html
@@ -64,7 +64,7 @@
             <img src="pictures/cursor2.png" alt="">
             <img src="pictures/cursor1.png" alt="">
 
-            <a href="">
+            <a href="https://lucyhu13.github.io/Webworkbook_2b/week5/dot_to_dot/">
                 <h2>Dot To Dot</h2>
                 <p>This is an activity which will need the user to press any key on the keyboard to place a number,
                     click and drag your mouse to draw.</p>
