--- a/VSC_2B/week6_activities.html
+++ b/VSC_2B/week6_activities.html
@@ -75,7 +75,7 @@
                 sharp pencil is
                 more dangerous than a book.</p>
 
-            <a href="">
+            <a href="https://lucyhu13.github.io/Webworkbook_2b/week6/week6_piechart/">
                 <h2>Data visualization</h2>
             </a>
 
@@ -86,10 +86,6 @@
             </p>
             <img src="pictures/datainmybag.JPG" alt="">
             <img src="pictures/piechart.png" alt="">
-
-
-            <h2>After class data collection</h2>
-            <p>From the inspiration of project "Dear Data",I decided to collect on day</p>
 
 
 
