--- a/VSC_2B/wwwDevelopment.html
+++ b/VSC_2B/wwwDevelopment.html
@@ -46,23 +46,36 @@
 
     <div class="outercontainer">
         <header>
-            <h1 style="text-align: center;">WEEK 6 ACTIVITIES</h1>
+            <h1 style="text-align: center;">Workbook Developemnt</h1>
         </header>
 
         <!-- 文本 -->
         <div class="centertext">
-            <a href="">
-                <h2>Data in my bag</h2>
-            </a>
 
-            <p>In the week 6 course we discussed how to classify data, Giorgia Lupi and Stefanie Posavec's project “Dear
-                Data” has given me great inspiration. Anything in life can be converted into data. In class we did an
-                activity to
-                categorize all our items. Our group arranged the items in such a way that the items on the far left are
-                the items that
-                we least want others to see (privacy), and the items on the far right are the items that we least want
-                others to see.
+
+            <p>
+                I first made the collage-style effect I wanted in Illustrator, and there will be a menu bar in the upper
+                left corner.
             </p>
+
+            <img src="pictures/development.png" alt="">
+
+
+            <p>
+                I first imported all the images and then typed them.I want to make a shrinking menu bar, and links to
+                other pages will appear when clicked. I searched for similar tutorials
+                on the Internet and found that javascript needs to be introduced. So I created a new folder named js in
+                the folder and
+                then used the code on the website to make changes. I want to change the original style, change the
+                background to black,
+                and display 3 lines. and changed the font size to achieve the final goal
+            </p>
+            <img src="pictures/nav_html.png" alt="">
+            <p>
+                And after finish buiding the basics,I started to add small elements to make the pager more interactive
+                such as a tracking cursor img.This has done by javascript.
+            </p>
+            <img src="pictures/sursor.png" alt="">
 
 
         </div>
