--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webworkbook_Porject 2B</title>
     <link rel="stylesheet" href="css/2bstylesheet.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&family=Lilita+One&display=swap" rel="stylesheet">
+
+    <!-- menu -->
     <script src="https://kit.fontawesome.com/81c2c05f29.js" crossorigin="anonymous"></script>
+
 </head>
 
 
@@ -19,19 +26,19 @@
         <div class="backdrop"></div>
         <ul>
             <li>
-                <a href="#"> Home</a>
+                <a href="home.html"> Home</a>
             </li>
             <li>
-                <a href="#"> Project 2A</a>
+                <a href="https://lucyhu13.github.io/workbook_2A/"> Project 2A</a>
             </li>
             <li>
                 <a href="index.html"> Project 2B</a>
             </li>
             <li>
-                <a href="#"> Project 2C</a>
+                <a href=""> Project 2C</a>
             </li>
             <li>
-                <a href="#"> Contact Me</a>
+                <a href=""> Contact Me</a>
             </li>
         </ul>
     </nav>
@@ -40,15 +47,11 @@
         <button class="trigger"><i class="fas fa-bars"></i></button>
     </div>
 
-
-
-
     <div class="flexbox">
         <header class="project2b image"> <a class="transition" style="text-decoration:none" href="2b_2.html">PROJECT
                 2B</a>
         </header>
     </div>
-
 
     <div>
         <img class="human image" src="pictures/Sculpture4.png" alt="">
@@ -58,8 +61,8 @@
         <img class="orange1 image" src="pictures/18.png" alt="">
     </div>
 
-
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
