--- a/VSC_2B/index.html
+++ b/VSC_2B/index.html
@@ -26,7 +26,7 @@
         <div class="backdrop"></div>
         <ul>
             <li>
-                <a href="#"> Home</a>
+                <a href="home.html"> Home</a>
             </li>
             <li>
                 <a href="https://lucyhu13.github.io/workbook_2A/"> Project 2A</a>
@@ -35,10 +35,10 @@
                 <a href="index.html"> Project 2B</a>
             </li>
             <li>
-                <a href="#"> Project 2C</a>
+                <a href=""> Project 2C</a>
             </li>
             <li>
-                <a href="#"> Contact Me</a>
+                <a href=""> Contact Me</a>
             </li>
         </ul>
     </nav>
