--- a/Interactive_2C/index.html
+++ b/Interactive_2C/index.html
@@ -24,7 +24,7 @@
       <a href="https://lucyhu13.github.io/workbook_2A/">Project2A</a>
       <a href="https://lucyhu13.github.io/Webworkbook_2b/VSC_2B/">Project2B</a>
       <a href="index.html">Project2C</a>
-      <a href="contact">About</a>
+      <a href="about.html">About</a>
     </div>
   </div>
 
