--- a/Interactive_2C/loading.html
+++ b/Interactive_2C/loading.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loading</title>
     <link rel="stylesheet" type="text/css" href="weeks.css">
     <style>
         body {
@@ -282,7 +282,7 @@
             <a class="project2a" href="https://lucyhu13.github.io/workbook_2A/">Project 2A</a>
             <a class="project2b" href="https://lucyhu13.github.io/Webworkbook_2b/VSC_2B/">Project 2B</a>
             <a class="project2c" href="index.html">Project 2C</a>
-            <a class="about" href="contact">About</a>
+            <a class="about" href="about.html">About</a>
 
             <a class="previous" href="index.html">previous</a>
             <a class="next" href="week7.html">next</a>
