--- a/Interactive_2C/others.html
+++ b/Interactive_2C/others.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other</title>
+    <title>Others</title>
     <link rel="stylesheet" href="weeks.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -225,7 +225,7 @@
             <a class="project2a" href="https://lucyhu13.github.io/workbook_2A/">Project 2A</a>
             <a class="project2b" href="https://lucyhu13.github.io/Webworkbook_2b/VSC_2B/">Project 2B</a>
             <a class="project2c" href="index.html">Project 2C</a>
-            <a class="about" href="contact">About</a>
+            <a class="about" href="about.html">About</a>
 
             <a class="previous" href="week9.html">previous</a>
             <a class="next" href="week8.html">next</a>
