--- a/Interactive_2C/week7.html
+++ b/Interactive_2C/week7.html
@@ -86,7 +86,7 @@
             <a class="project2a" href="https://lucyhu13.github.io/workbook_2A/">Project 2A</a>
             <a class="project2b" href="https://lucyhu13.github.io/Webworkbook_2b/VSC_2B/">Project 2B</a>
             <a class="project2c" href="index.html">Project 2C</a>
-            <a class="about" href="contact">About</a>
+            <a class="about" href="about.html">About</a>
 
             <a class="previous" href="index.html">previous</a>
             <a class="next" href="week8.html">next</a>
