--- a/Interactive_2C/week9.html
+++ b/Interactive_2C/week9.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Week7</title>
+    <title>Week9</title>
     <link rel="stylesheet" type="text/css" href="weeks.css">
 
 
@@ -59,7 +59,7 @@
             <a class="project2a" href="https://lucyhu13.github.io/workbook_2A/">Project 2A</a>
             <a class="project2b" href="https://lucyhu13.github.io/Webworkbook_2b/VSC_2B/">Project 2B</a>
             <a class="project2c" href="index.html">Project 2C</a>
-            <a class="about" href="contact">About</a>
+            <a class="about" href="about.html">About</a>
 
             <a class="previous" href="week8.html">previous</a>
             <a class="next" href="others.html">next</a>
